Update wally package name

--- a/wally.toml
+++ b/wally.toml
@@ -1,5 +1,5 @@
 [package]
-name = "redon-tech/redonuui"
+name = "redon-tech/redon-ui"
 version = "0.1.0-alpha.1"
 license = "MIT"
 authors = ["parker02311"]
