Add wally description

--- a/wally.toml
+++ b/wally.toml
@@ -1,5 +1,6 @@
 [package]
 name = "redon-tech/redon-ui"
+description = "RedonUI is a component library for Fusion using the catppuccin color pallet. Read more at the project homepage!"
 version = "0.1.0-alpha.1"
 license = "MIT"
 authors = ["parker02311"]
