--- a/wally.toml
+++ b/wally.toml
@@ -8,7 +8,8 @@ authors = ["parker02311"]
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
-exclude = ["RedonUI.rbxl", "RedonUI.rbxl.lock"]
+exclude = ["**"]
+include = ["src", "src/*", "default.project.json", "wally.toml", "wally.lock", "LICENSE.md"]
 
 [dependencies]
 Fusion = "elttob/fusion@0.3.0"
